update font-files function to support explicit type
remove async module
update asset_cache_buster in test for async testing

--- a/test/scss/font-files.scss
+++ b/test/scss/font-files.scss
@@ -1,4 +1,4 @@
 @font-face {
   font-family: 'SomeFont';
-  src: font-files('SomeFont.woff2', 'SomeFont.woff', 'SomeFont.ttf', 'SomeFont.svg#SomeFont');
+  src: font-files('SomeFont.woff2', 'woff2', 'SomeFont.woff', 'SomeFont.ttf', 'SomeFont.svg#SomeFont');
 }
